--- a/company.html
+++ b/company.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="scss/main.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="stylesheets/main.css">
+    <title>Company</title>
 </head>
 <body>
+    <div class="companysection2">
+        
+        <h3>We've got the numbers</h3>
+        <p>Call us nerds,we dont mind.At the heart of the <br>Hopper app is a prediction algorithm that processes <br>trillions of data points,allowing us to make precise <br>and personalized travel recommendations.</p>
+    
+   
+        <img src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412002/samples/figma%20company/paicdtbztdzhdc9buhwp.jpg style="width:35rem;height:20rem;">
+    </div>
+
+    <div class="companysection2num">
+        <div class="item1"><h1>2,100,037<br>APP INSTALLS</h1></div>
+        <div class="item1"><h1>360,002,999<br>DOLLARS SAVED</h1></div>
+        <div class="item1"><h1>3,600,029,991<br>NOTIFICATION SENT</h1></div>
+        <div class="item1"><h1>21,100,037<br>PLANNED TRIPS</h1></div>
+    </div>
     <script src=js/main.js></script>
 </body>
 </html>
