adss styles to career list input and table section

--- a/careerlist.html
+++ b/careerlist.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheets\main.css">
-    <title>Document</title>
+    <title>Career List</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>
+        
+        $(function() {
+            $('.reusable').load('headera.html');
+        });
+    </script>
 </head>
 <body>
-    <div>
-
-    </div>
+    <div class="reusable" ></div>
     <main class="main">
             <div class="box">
                 <div class="inputs">
