branch created from develop

--- a/pages/company.html
+++ b/pages/company.html
@@ -1,28 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/main.css">
-    <title>Company</title>
+    <title>Document</title>
 </head>
-<body>
-    <div class="companysection2">
-        
-        <h3>We've got the numbers</h3>
-        <p>Call us nerds,we dont mind.At the heart of the <br>Hopper app is a prediction algorithm that processes <br>trillions of data points,allowing us to make precise <br>and personalized travel recommendations.</p>
-    
-   
-        <img src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412002/samples/figma%20company/paicdtbztdzhdc9buhwp.jpg style="width:35rem;height:20rem;">
-    </div>
 
-    <div class="companysection2num">
-        <div class="item1"><h1>2,100,037<br>APP INSTALLS</h1></div>
-        <div class="item1"><h1>360,002,999<br>DOLLARS SAVED</h1></div>
-        <div class="item1"><h1>3,600,029,991<br>NOTIFICATION SENT</h1></div>
-        <div class="item1"><h1>21,100,037<br>PLANNED TRIPS</h1></div>
+<body id="company">
+    <div class="restriction">
+        <div class="companysection2">
+
+            <div>
+                <h3>We've got the numbers</h3>
+                <p>Call us nerds,we dont mind.At the heart of the
+                    <br>Hopper app is a prediction algorithm that processes
+                    <br>trillions of data points,allowing us to make precise
+                    <br>and personalized travel recommendations.</p>
+                <a class="hide-link" href="#">Learn More</a>
+            </div>
+
+            <img class="bear-footer" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412002/samples/figma%20company/paicdtbztdzhdc9buhwp.jpg>
+        </div>
+
+        <div class="companysection2-num">
+            <div style=margin-right:2rem; class="company-item">
+                <h1 style=color:coral;>2,100,037</h1>
+                <p>APP INSTALLS</p>
+            </div>
+            <div style=margin-right:2rem; class="company-item">
+                <h1 style=color:coral;>360,002,999</h1>
+                <p>DOLLARS SAVED</p>
+            </div>
+            <div style=margin-right:2rem; class="company-item">
+                <h1 style=color:coral;>3,600,029,991</h1>
+                <p>NOTIFICATION SENT</p>
+            </div>
+            <div style=margin-right:2rem; class="company-item">
+                <h1 style=color:coral;>21,100,037</h1>
+                <p>PLANNED TRIPS</p>
+            </div>
+        </div>
+
+        <div>
+            <img class="company-graph" src=h ttps://res.cloudinary.com/dtbjhs8a6/image/upload/v1569091570/samples/new%20folder/s69jgtv70eqxcek34wff.png>
+        </div>
+        <div class="companysection-footer">
+            <div>
+                <h2> We're backed by some of</br> the world's leading investors.</h2>
+                <p>Hopper has raised over $184M. Our investors believe</br> in our product and support our mobile-only mission</br> to change the way the world travels.</p>
+                <a href="#">Learn More</a></div>
+            <div> <img class="carrot" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569093377/samples/new%20folder/pqxxee3usiyft9cpskcw.png></div>
+        </div>
+
+    </div>
+    <img class="company-footer-img" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569091570/samples/new%20folder/s2izwkfbdstgivmhibew.jpg>
+
+    <div class="company-media">
+        <h1>Hopper is backed by some of</br> the world's leading investors </h1>
+        <p>Hopper has successfully raised over 83M,</br>
+            supporting it's mission to revolutionise the</br>
+            travel industry.</p>
+        <a style="color:skyBlue;" href="#">Learn More</a>
+        <div class="company-media-img">
+            <img style="margin-top:2rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569236960/samples/new%20folder/gexegsikffznlernqder.png" alt="">
+            <img style="  margin-left: 5rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569236980/samples/new%20folder/n790gweoqaibqs1fzee0.png" alt="">
+            <img style="margin-left: 5rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569236971/samples/new%20folder/pfbphhrp7zehhkf4eeeg.png" alt=""> </div>
+        <div class="company-media-img2">
+            <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569236960/samples/new%20folder/h1zpahev3lgy2rz5iyzt.png" alt="">
+            <img style="margin-left: 5rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569236953/samples/new%20folder/y0m2hmyiuwkcisq5iogs.png" alt="">
+            <img style="margin-left: 5rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569236960/samples/new%20folder/hlmwo44tluxmivxhuo1k.png" alt=""></div>
+
     </div>
     <script src=js/main.js></script>
 </body>
+
 </html>
