perferted People section and and job section, there's still a bit of work to be carried out on company and career-section.

--- a/pages/people.html
+++ b/pages/people.html
@@ -8,6 +8,38 @@
     <title>Document</title>
 </head>
 <body>
+        <div class="flex-container">
+                <div id="flex-item-1">
+                    <h2>Assorted Hopper Humans</h2>
+                    <p>A ukulele-playing developer, an engineer-turned-data-scientist, a copywriter-turned-marketer-turned-product manager: at Hoper, background are diverse and unique, and pathways for growth are limitless.  how will your story add to our mix?</p>
+                </div>
+                <div id="flex-item-2">
+                    <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231669/samples/figma%20people/arhx9gb7agwxj5xdiv6c.png" alt="">
+                </div>
+            </div>
+    
+            <div class="container">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569232310/samples/figma%20people/z3nijcy6iuhwspvdgulm.png" alt="" class="item" id="one">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569247493/samples/figma%20people/e19evghevw4dviwabfol.png" alt="" class="item" id="two">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/dqo9h01dcqqdpe29jmwu.png" alt="" class="item" id="three">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/rhjqbtcbx8nqaom8fzwd.png" alt="" class="item" id="four">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/bgf6pbgyvrppdhqmzhk2.png" alt="" class="item" id="five">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569234535/samples/figma%20people/zsuw2t9cfo6qnyrjukcx.png" alt="" class="item"  id="six">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/pvif875rh2ex3wc6tcdf.png" alt="" class="item" id="seven">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/mext9xeauzlqrywdclz5.png" alt="" class="item" id="eight">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/feavx8i5hyzkhiyshl4e.png" alt="" class="item" id="nine">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/pbbhmnulq9bj2osqfwbq.png" alt="" class="item" id="ten">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/elnnpj1zt2zznab9vjwp.png" alt="" class="item" id="eleven">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/e406telqon20bffgeggv.png" alt="" class="item" id="twelve">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/geaqgjbmhlah9dodejx9.png" alt="" class="item" id="thirteen">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231615/samples/figma%20people/cr2nz6rusf1mlgrrfhxu.png" alt="" class="item" id="fouteen">
+    
+                <div>
+                    <h3>Building a team of really diverse people who work well together is core of what drives us.</h3><br>
+                    <p>"</p>
+                    <h5>Andrew Boch, COO</h5>
+                </div>
+            </div>
     <script src=js/main.js></script>
 </body>
 </html>
