--- a/pages/careerlist.html
+++ b/pages/careerlist.html
@@ -8,6 +8,130 @@
     <title>Document</title>
 </head>
 <body>
+    <main class="main">
+        <div class="box">
+            <div class="inputs">
+                <input type="search" name="search" class="search" placeholder="Search position">
+                <select name="select" class="select__Input" id="">
+                    <option value="department">All Department</option>
+                    <option value=""></option>
+                    <option value=""></option>
+                </select>
+                <select name="select" class="select__Input t" id="">
+                        <option value="department">All Cities</option>
+                        <option value=""></option>
+                        <option value=""></option>
+                    </select>
+
+                    <h3 class="position">434 available positions</h3>
+            </div>
+          </div>
+
+        <table class="table">
+            <tr class="table__header">
+                <td>POSITIONs</td>
+                <td>DEPARTMENT</td>
+                <td>CITIES</td>
+                <td></td>
+            </tr>
+
+            <tr class="table__row">
+                <td class="table__row--mod">Copywriter</td>
+                <td>Creative and Design</td>
+                <td>Montreal</td>
+                <td class='table__row--i'>&rarr;</td>
+            </tr>
+            <tr class="table__row">
+                <td class="table__row--mod">Product Designer</td>
+                <td>Creative and Design</td>
+                <td>Boston</td>
+                <td class='table__row--i'>&rarr;</td>
+            </tr>
+            <tr class="table__row">
+                <td class="table__row--mod">Illustrator</td>
+                <td>Creative and Design</td>
+                <td>Remote</td>
+                <td class='table__row--i'>&rarr;</td>
+            </tr>
+            <tr class="table__row">
+                <td class="table__row--mod">French Copywriter</td>
+                <td>Creative and Design</td>
+                <td>Montreal</td>
+                <td class="table__row--i">&rarr;</td>
+            </tr>
+            <tr class="table__row">
+                <td class="table__row--mod">Graphic Designer</td>
+                <td>People</td>
+                <td>Montreal</td>
+                <td class='table__row--i'>&rarr;</td>
+            </tr>
+             <tr class="table__row">
+                    <td class="table__row--mod">St. Graphic Designer</td>
+                    <td>People</td>
+                    <td>Montreal</td>
+                    <td class='table__row--i'>&rarr;</td>
+                </tr>
+                
+                <tr class="table__row">
+                        <td class="table__row--mod">Product Designer</td>
+                        <td>People</td>
+                        <td>Boston</td>
+                        <td class='table__row--i'>&rarr;</td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__row--mod">Illustrator</td>
+                        <td>People</td>
+                        <td>Remote</td>
+                        <td class='table__row--i'>&rarr;</td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__row--mod">French Copywriter</td>
+                        <td>Engineering</td>
+                        <td>Montreal</td>
+                        <td class='table__row--i'>&rarr;</td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__row--mod">Graphic Designer</td>
+                        <td>Engineering</td>
+                        <td>Montreal</td>
+                        <td class='table__row--i'>&rarr;</td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__row--mod">St. Graphic Designer</td>
+                        <td>Engineering</td>
+                        <td>Montreal</td>
+                        <td class='table__row--i'>&rarr;</td>
+                    </tr>
+                   
+        </table>
+
+        <div class="mob-tab">
+            <section class='mob--tab'>
+            <p class="position">Copywriter</p>
+            <p class="dep-cities">Creative and Design, Montreal</p>
+        </section>
+        <section  class='mob--tab'>
+                <p class="position">Copywriter</p>
+                <p class="dep-cities">Creative and Design, Montreal</p>
+            </section>
+            <section  class='mob--tab'>
+                    <p class="position">Copywriter</p>
+                    <p class="dep-cities">Creative and Design, Montreal</p>
+                </section>
+                <section  class='mob--tab'>
+                        <p class="position">Copywriter</p>
+                        <p class="dep-cities">Creative and Design, Montreal</p>
+                    </section>
+                    <section  class='mob--tab'>
+                            <p class="position">Copywriter</p>
+                            <p class="dep-cities">Creative and Design, Montreal</p>
+                        </section>
+                        <section  class='mob--tab'>
+                            <p class="position">Copywriter</p>
+                            <p class="dep-cities">Creative and Design, Montreal</p>
+                        </section>
+        </div>
+    </main>
     <script src=js/main.js></script>
 </body>
 </html>
