added/final/finishing/touches/to/the/homepage/subnav-cta-modal-cta-modal-sent

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -25,15 +25,18 @@
             </ul>
 
         </div>
-        <div class="homepages-images">
-            <img class="homepages-images1" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569182060/samples/figma%20homepage/f9qjcsgd7ilp0meuhic8.png>
-            <img class="homepages-images2" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568562607/samples/figma%20homepage/qdgo64rsa0f8tn9eh9dc.png>
-            <img class="homepages-images3" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568562609/samples/figma%20homepage/xmfm62sdm8gzn7ruh0o7.png> </div>
+        <div class="homepages-images-main">
+         <div>  <img style="margin-right:-4rem;" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569182060/samples/figma%20homepage/f9qjcsgd7ilp0meuhic8.png></div>
+           <div class="homepages-images">
+           <div> <img class="homepages-images2" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568562607/samples/figma%20homepage/qdgo64rsa0f8tn9eh9dc.png></div>
+        <div> <img style="margin-left:-6rem;" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568562609/samples/figma%20homepage/xmfm62sdm8gzn7ruh0o7.png> </div>
+        </div>
+       </div>
         <div class="subnav-feat">
             <p class="subnav-feat-p">FEATURES</p>
             <h3>Plan less,travel more</h3>
             <p>Hopper has helped 30M travelers track prices and book trips
-                <br>to over 200 destinations.<a href="#">The hopper app</a> will monitor prices
+                <br>to over 200 destinations.<a style="color:skyblue;" href="#">The hopper app</a> will monitor prices
                 <br> for you and you can book in just a few taps</p>
 
             <div class="feat2">
@@ -51,7 +54,7 @@
             <h3> Get the Hopper app and<br>
                                             start planning your trip</h3>
             <p>Send a link to your phone,or download
-                <br> directly from <a href="#">hopper.com</a> on your device</p>
+                <br> directly from <a style="color:coral;" href="#">hopper.com</a> on your device</p>
             <form>
 
                 <input type="text" placeholder="Phone Number">
@@ -59,8 +62,8 @@
             </form>
 
             <div class="home-copyright">
-                <img src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568752648/samples/figma%20homepage/qmvvy7cqvs371ezigjpu.svg style="width:1rem;height:3rem;">AVAILABLE ON THE </br>APP STORE
-                <img class="playstore" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568736592/samples/figma%20homepage/rfxveoanvti6friqmhka.svg" style="width:1rem;height:3rem;">AVAILABLE ON THE
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569416175/samples/new%20folder/djxffw4bxczebv9wm26t.png" style="width:2rem;height:2rem;margin-right:1rem;">AVAILABLE ON THE </br>APP STORE
+                <img class="playstore" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569412984/samples/new%20folder/u9mse8q4i69m9ker1v50.jpg" style="width:4rem;height:4rem;">AVAILABLE ON THE
                 <br> GOOGLE STORE</div>
             <p class="gridp">By clicking "Send Link", you agree to the <a href="#">Terms Of Service</a></p>
 
@@ -75,11 +78,11 @@
 
             <button class="home-cta-btn">Close</button>
             <div class="home-copyright">
-                <img src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568752648/samples/figma%20homepage/qmvvy7cqvs371ezigjpu.svg style="width:1rem;height:1rem;">AVAILABLE ON THE </br>APP STORE
-                <img class="playstore" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568736592/samples/figma%20homepage/rfxveoanvti6friqmhka.svg" style="width:1rem;height:1rem;">AVAILABLE ON THE
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569416175/samples/new%20folder/djxffw4bxczebv9wm26t.png" style="width:2rem;height:2rem;margin-right:1rem;">AVAILABLE ON THE </br>APP STORE
+                <img class="playstore" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569412984/samples/new%20folder/u9mse8q4i69m9ker1v50.jpg" style="width:4rem;height:4rem;">AVAILABLE ON THE
                 <br> GOOGLE STORE</div>
 
-            <p class="gridp">By clicking "Send Link", you agree to the <a href="#">Terms Of Service</a></p>
+            <p class="gridp">By clicking "Send Link", you agree to the <a style="color:skyblue;" href="#">Terms Of Service</a></p>
 
         </div>
 
