add the 404-section

--- a/pages/404.html
+++ b/pages/404.html
@@ -8,6 +8,22 @@
     <title>Document</title>
 </head>
 <body>
+        <main class="main">
+        
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412086/samples/figma%20terms%20and%20condition/eimoecntpe6nioj5rfsl.png" alt="blue_cloud" class="blue_cloud">
+        
+                <div class="w404_img">
+                    <section class="w404_img__txt">
+                        <h1 class="w404__img--txtt">
+                            Oh no -- we seem to be lost in the stratosphere
+                        </h1>
+                        <p class="w404__img--txttt">
+                            We can't seem to find the page you're looking for. Try going back to the homepage or downloading the <a href="#">Hopper app here</a>
+                        </p>
+                    </section>
+                    <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412089/samples/figma%20terms%20and%20condition/bnxwtfhcbngwc6va5s8s.png" alt="404-image" class="img--space_rabbit">
+                </div>
+            </main>
     <script src=js/main.js></script>
 </body>
 </html>
