--- a/pages/people.html
+++ b/pages/people.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="../css/main.css">
     <title>People</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-
 
 
 
@@ -133,20 +133,30 @@
         </div>
     </div>
 
-        <div class="container">
-                <div class="row">
-                    <div class="col-12 peopleVideo">
-                        <img class="peopleVideo__image" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411432/samples/figma%20people/fmnavliujqcaw0esgxfu.png" width="1200" height="500">
-                        <img class="mobilePeopleVideo__image" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411426/samples/figma%20people/la8trdvguws8tflesghm.png" width="300">
-                    </div>
-                </div>
+    <div class="container peopleCarousel">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="peopleCarousel__image1" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411432/samples/figma%20people/fmnavliujqcaw0esgxfu.png" width="1200" height="500" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="peopleCarousel__image2" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569273807/samples/figma%20people/zzdhjyu1qyyucgut7wl1.png" height="500" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="peopleCarousel__image3" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411426/samples/figma%20people/la8trdvguws8tflesghm.png" height="500" alt="Third slide">
+          </div>
         </div>
+      </div>
+      </div>
 
 
 
 
 
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src=js/main.js></script>
+
 </body>
 </html>
