adds the mobile view for the 404-section

--- a/pages/404.html
+++ b/pages/404.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-        <main class="main">
+        <main class="main1">
         
                 <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412086/samples/figma%20terms%20and%20condition/eimoecntpe6nioj5rfsl.png" alt="blue_cloud" class="blue_cloud">
         
@@ -23,6 +23,15 @@
                     </section>
                     <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412089/samples/figma%20terms%20and%20condition/bnxwtfhcbngwc6va5s8s.png" alt="404-image" class="img--space_rabbit">
                 </div>
+
+                <section class="w404_mob">
+                    <h1 class="w404_mob--txt">
+                        oh, noooooooooooes!
+                    </h1>
+                    <p class="w404_mob--txtt">
+                        I think you're lost, but fear not. You can either go  <a href="home.html">back home </a> or  <a href="#">Send our app to your phone.</a> I'm sure we can help you find your next destination &#128522
+                    </p>
+                    <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412089/samples/figma%20terms%20and%20condition/bnxwtfhcbngwc6va5s8s.png" alt="404-image" class="space_rabbit--mob">
             </main>
     <script src=js/main.js></script>
 </body>
