pushed/the/lastdiv/to/middle

--- a/pages/companysubnav.html
+++ b/pages/companysubnav.html
@@ -40,7 +40,7 @@
             </div>
             
             <div><img style="margin-left:7rem;margin-top:7rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569329943/samples/new%20folder/jaxnad9vygno0mrvxeex.png" alt=""></div>
-            <div style="display:flex; margin-top:5rem; margin-left:1rem;">
+            <div style="display:flex; margin-top:5rem; margin-left:16rem;">
             <div>
                 <h3 style="margin-bottom:2rem;">We've got the numbers</h3>
                 <p style="margin-bottom:2rem;">Call us nerds,we dont mind.At the heart of the
@@ -53,7 +53,7 @@
             <img style="width: 30rem; margin-left:3rem;" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412002/samples/figma%20company/paicdtbztdzhdc9buhwp.jpg></div>
         </div>
     
-            <div class="companysubnav2-num">
+            <div style="margin-left:20rem;" class="companysubnav2-num">
                 <div style="display:flex;">
                     <div>
                         <h1 style=color:coral;>2,100,037</h1>
