added-the-correct-cloudinary-linktheader/footer/careerdetails/company

--- a/pages/careerdetails.html
+++ b/pages/careerdetails.html
@@ -15,14 +15,14 @@
     <div class="careerdetails">
         <div class="careerdetails-item1">
 
-            <img class="careerdetails-logo" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/d44fypvhzbshckeixtfl.png>
+            <img class="careerdetails-logo" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/d44fypvhzbshckeixtfl.png">
             
 <div class="careerdet-h1">
     <div class="careerdet-h1-p">  <h3 style="font-size:1.3rem;"> We truly value production,</br>creation and innovation,not</br> just by our company culture</br> but by the people we invite </br>to join the company.</br></h3></br>
             <p>Fred Ladonde, CEO</p>
         </div>
     
-        <div>    <img class=careerdet-h1-image src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569287079/samples/new%20folder/g4qq5tj8idqebyheewyb.png" alt=""></div>
+        <div>    <img class=careerdet-h1-image src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569536915/samples/zainabs/fn73touzvxqxy7bn5bpy.png" alt=""></div>
 
     </div>
             <p class="careerdet-p1">THE ROLE</p>
@@ -94,7 +94,7 @@
 
 
         <div class="career-details-mobile">
-            <img style="margin-left: 25rem;margin-top: 2rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569490206/samples/new%20folder/z1goddf6gpfzbdgdjors.png" alt="">
+            <img style="margin-left: 25rem;margin-top: 2rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569537178/samples/zainabs/uypegpdealxln6wzdfpa.png" alt="">
           <div class="careerdet-mobile1">  <h1>Concepteur de </br>produits mobile</h1>
             <p>Conception</br>Full time montreal</p>
             <button class="applique">Applique</button>
