add missing links

--- a/pages/careerdetails.html
+++ b/pages/careerdetails.html
@@ -22,7 +22,7 @@
             <p>Fred Ladonde, CEO</p>
         </div>
     
-        <div>    <img class=careerdet-h1-image src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569287079/samples/new%20folder/g4qq5tj8idqebyheewyb.png" alt=""></div>
+        <div>    <img class=careerdet-h1-image src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569536915/samples/zainabs/fn73touzvxqxy7bn5bpy.png" alt=""></div>
 
     </div>
             <p class="careerdet-p1">THE ROLE</p>
@@ -94,7 +94,7 @@
 
 
         <div class="career-details-mobile">
-            <img style="margin-left: 25rem;margin-top: 2rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569490206/samples/new%20folder/z1goddf6gpfzbdgdjors.png" alt="">
+            <img style="margin-left: 25rem;margin-top: 2rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569537178/samples/zainabs/uypegpdealxln6wzdfpa.png" alt="">
           <div class="careerdet-mobile1">  <h1>Concepteur de </br>produits mobile</h1>
             <p>Conception</br>Full time montreal</p>
             <button class="applique">Applique</button>
