i noticed a the lower part of people section 2a that i worked on disappered in the latest develop branched and I,ve fixed that. Also, I've used the reusable footer in the careerlist-2 html file that i created. i am only waiting for the header which Idris is working on

--- a/pages/people.html
+++ b/pages/people.html
@@ -60,17 +60,17 @@
     </div>
 
 
-    <div class="flex-container">
-            <div id="flex-item-1">
+    <div id="first-people-section-2a">
+            <div id="first-people-section-2a-item-1">
                 <h2>Assorted Hopper Humans</h2>
                 <p>A ukulele-playing developer, an engineer-turned-data-scientist, a copywriter-turned-marketer-turned-product manager: at Hoper, background are diverse and unique, and pathways for growth are limitless.  how will your story add to our mix?</p>
             </div>
-            <div id="flex-item-2">
+            <div id="first-people-section-2a-item-2">
                 <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231669/samples/figma%20people/arhx9gb7agwxj5xdiv6c.png" alt="">
             </div>
     </div>
     
-    <div class="container">
+    <div id="second-people-section-2a">
         <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569232310/samples/figma%20people/z3nijcy6iuhwspvdgulm.png" alt="" class="item" id="one">
         <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569247493/samples/figma%20people/e19evghevw4dviwabfol.png" alt="" class="item" id="two">
         <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/dqo9h01dcqqdpe29jmwu.png" alt="" class="item" id="three">
