Added a new page (company-video-modal.html) as illustrated by Chidi, and linked it to an achor tag element on the company.html page

--- a/pages/company.html
+++ b/pages/company.html
@@ -94,10 +94,10 @@
             <h1>Welcome to New York</h1>
             <p>In Union Square surrounded by tons of delicious restaurants and a gorgeous park, you'll never have a sad desk salad for lunch</p>
             <p>
-                <a href="#">Watch the short film <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568713108/samples/figma%20company/fa1aidjezwgglknqd9d0.png" alt=""></a> 
+                <a href="company-video-modal.html">Watch the short film <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568713108/samples/figma%20company/fa1aidjezwgglknqd9d0.png" alt=""></a> 
 
             
-                <a href="#" id="location">Location <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568713108/samples/figma%20company/bqt8kww5qd39pbji5p5w.png" alt=""><a> 
+                <a href="company-video-modal.html" id="location">Location <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568713108/samples/figma%20company/bqt8kww5qd39pbji5p5w.png" alt=""><a> 
             </p>
         </div>
     </section>
