--- a/pages/company.html
+++ b/pages/company.html
@@ -14,16 +14,17 @@
 
     <div class="company-subnav-1">
         <div>
-            <img class="company-subnavimg" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/lsqdu9pihm5dwupaxyju.png>
+            <img class="company-subnavimg" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/lsqdu9pihm5dwupaxyju.png" alt="">
         </div>
         <ul class="company-subnav-ul">
             <li>People</li>
             <li>The Data</li>
             <li>Investors</li>
             <li>Locations</li>
-            <li>Careers</li>
+            <li class="career-thin-line">Careers</li>
 
-            <li class="company-subnavbar-btn"><a style="color:skyblue;text-decoration:none;" href="#">Send app to your phone</a></li>
+            <li class="company-subnavbar-btn"><a href="#">Send app to your phone <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569847812/samples/zainabs/xf40rlu0jddvgijltrqd.png" alt="">
+            </a></li>
         </ul>
 
     </div>
@@ -40,7 +41,7 @@
                 <a class="hide-link" href="#">Learn More</a>
             </div>
 
-            <img class="bear-footer" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412002/samples/figma%20company/paicdtbztdzhdc9buhwp.jpg">
+            <img class="bear-footer" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412002/samples/figma%20company/paicdtbztdzhdc9buhwp.jpg" alt="">
         </div>
 
         <div class="companysection2-num">
@@ -63,23 +64,23 @@
         </div>
 
         <div>
-            <img class="company-graph" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569537709/samples/zainabs/pxlrnx0iwwec908sluij.png">
+            <img class="company-graph" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569537709/samples/zainabs/pxlrnx0iwwec908sluij.png" alt="">
         </div>
         <div class="companysection-footer">
             <div>
-                <h2> We're backed by some of</br> the world's leading investors.</h2>
-                <p>Hopper has raised over $184M. Our investors believe</br> in our product and support our mobile-only mission</br> to change the way the world travels.</p>
+                <h2> We're backed by some of<br> the world's leading investors.</h2>
+                <p>Hopper has raised over $184M. Our investors believe<br> in our product and support our mobile-only mission<br> to change the way the world travels.</p>
                 <a href="#">Learn More</a></div>
-            <div> <img class="carrot" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569537946/samples/zainabs/adfimk9j2d6i2g89gbqm.png"></div>
+            <div> <img class="carrot" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569537946/samples/zainabs/adfimk9j2d6i2g89gbqm.png" alt=""></div>
         </div>
 
     </div>
-    <img class="company-footer-img" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569538221/samples/zainabs/hb3rovmsdmnxvfoovl0i.png">
+    <img class="company-footer-img" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569538221/samples/zainabs/hb3rovmsdmnxvfoovl0i.png" alt="">
 
     <div class="company-media">
-        <h1>Hopper is backed by some of</br> the world's leading investors </h1>
-        <p>Hopper has successfully raised over 83M,</br>
-            supporting it's mission to revolutionise the</br>
+        <h1>Hopper is backed by some of<br> the world's leading investors </h1>
+        <p>Hopper has successfully raised over 83M,<br>
+            supporting it's mission to revolutionise the<br>
             travel industry.</p>
         <a style="color:skyBlue;" href="#">Learn More</a>
         <div class="company-media-img">
