made changes on the review given

--- a/pages/404.html
+++ b/pages/404.html
@@ -9,8 +9,8 @@
     <script src='../assets/js/main.js'></script>
     <title>Document</title>
 </head>
-<body>
-    <div data-include= "header-b"></div>
+<body class="body">
+    <div data-include= "header"></div>
       <main class="main1">
         
                 <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412086/samples/figma%20terms%20and%20condition/eimoecntpe6nioj5rfsl.png" alt="blue_cloud" class="blue_cloud">
