worked/on/career-details-section-responsiveness

--- a/pages/careerdetails.html
+++ b/pages/careerdetails.html
@@ -54,11 +54,11 @@
             <p class="careerdet-p1">ABOUT HOPPER</p>
             <p style="padding-bottom:1rem;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores porro distinctio suscipit reprehenderit aliquid aspernatur nobis. Obcaecati, nisi quaerat. Voluptas ipsum iusto dolorum optio tenetur accusamus ducimus tempore rerum quae esse perspiciatis explicabo, deserunt sunt, incidunt fugiat, vitae iure expedita! Dolores eaque suscipit obcaecati enim repellat sapiente eveniet quidem officia.</p>
 
-            <a style="color:white;text-decoration: none;margin-bottom:5rem;" href="#">Learn More</a>
+            <a style="color:white;text-decoration: none;" href="#">Learn More</a>
         </div>
 
         <div class="careerdetails-item2">
-            <img style="margin-left:33rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569537178/samples/zainabs/uypegpdealxln6wzdfpa.png" alt="">
+            <img style="margin-left:42rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569537178/samples/zainabs/uypegpdealxln6wzdfpa.png" alt="">
             <p>TITLE</p>
             <h3 class="careerdet-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, commodi.</h3>
             <div class=career-det-flex>
