adds a link to the last child of each table data: - click on left arrow links to careerdetail page (for desktop); - click on the job title links to careerdetail page (for mobile)

--- a/pages/careerlist.html
+++ b/pages/careerlist.html
@@ -12,8 +12,12 @@
 <body>
     <header class="header1">
             <div data-include="header-b" class="header-b"></div>
-            <!-- <div data-include="header"></div> -->
             <section class="header-txt">
+                <p class="txt">We're looking for curious </p>
+                <p class="txt"> problem solver sounds familiar?</p>   
+             </section>
+           
+            <section class="header-txtt">
                <p class="txt">We're looking for</p>
                <p class="txt"> curious problem solver.</p>
                <p class="txt">Sounds familiar?</p>   
@@ -118,28 +122,40 @@
 
         <div class="mob-tab">
             <section class='mob--tab'>
-            <p class="position">Copywriter</p>
-            <p class="dep-cities">Creative and Design, Montreal</p>
+                <p class="position">Copywriter</p>
+                        <a href="careerdetails.html" class="careerdetails">
+                            <p class="dep-cities">Creative and Design, Montreal</p>
+                        </a>  
         </section>
         <section  class='mob--tab'>
                 <p class="position">Copywriter</p>
-                <p class="dep-cities">Creative and Design, Montreal</p>
+                    <a href="careerdetails.html" class="careerdetails">
+                        <p class="dep-cities">Creative and Design, Montreal</p>
+                    </a>  
             </section>
             <section  class='mob--tab'>
                     <p class="position">Copywriter</p>
-                    <p class="dep-cities">Creative and Design, Montreal</p>
+                        <a href="careerdetails.html" class="careerdetails">
+                            <p class="dep-cities">Creative and Design, Montreal</p>
+                        </a>  
                 </section>
                 <section  class='mob--tab'>
                         <p class="position">Copywriter</p>
-                        <p class="dep-cities">Creative and Design, Montreal</p>
+                             <a href="careerdetails.html" class="careerdetails">
+                                <p class="dep-cities">Creative and Design, Montreal</p>
+                            </a>  
                     </section>
                     <section  class='mob--tab'>
                             <p class="position">Copywriter</p>
-                            <p class="dep-cities">Creative and Design, Montreal</p>
+                                <a href="careerdetails.html" class="careerdetails">
+                                    <p class="dep-cities">Creative and Design, Montreal</p>
+                                </a>  
                         </section>
                         <section  class='mob--tab'>
                             <p class="position">Copywriter</p>
-                            <p class="dep-cities">Creative and Design, Montreal</p>
+                                <a href="careerdetails.html" class="careerdetails">
+                                    <p class="dep-cities">Creative and Design, Montreal</p>
+                                </a>  
                         </section>
         </div>
     </main>
