adds font-family

--- a/pages/careerlist.html
+++ b/pages/careerlist.html
@@ -44,7 +44,7 @@
 
         <table class="table">
             <tr class="table__header">
-                <td>POSITIONs</td>
+                <td>POSITIONS</td>
                 <td>DEPARTMENT</td>
                 <td>CITIES</td>
                 <td></td>
