modify peoples page navbar

--- a/pages/people.html
+++ b/pages/people.html
@@ -10,7 +10,7 @@
     <script src='../assets/js/main.js'></script>
     <title>People</title>
 </head>
-<body>
+<body class='people'>
     <div data-include='header'></div>
     <div class="footer-writeup">
         
