Hopper.come rebased from develop

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -11,7 +11,7 @@
 <body>
     <div class="subnavbarsection">
     <nav class="subnavbar">
-        <div class="container">
+        <div class="containerss">
         
             <div><img class="headerimg" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/lsqdu9pihm5dwupaxyju.png></div>
             <ul class="subnav">
