--- a/pages/404.html
+++ b/pages/404.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='../assets/js/main.js'></script>
-    <title>Document</title>
+    <title>404</title>
 </head>
 <body class="body">
     <div data-include= "header"></div>
