change container to people-container

--- a/pages/people.html
+++ b/pages/people.html
@@ -88,7 +88,7 @@
             </div>
     </div>
     
-    <div class="container">
+    <div class="people-container">
         <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569232310/samples/figma%20people/z3nijcy6iuhwspvdgulm.png" alt="" class="item" id="one">
         <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569247493/samples/figma%20people/e19evghevw4dviwabfol.png" alt="" class="item" id="two">
         <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569231616/samples/figma%20people/dqo9h01dcqqdpe29jmwu.png" alt="" class="item" id="three">
